--- a/BiquOperatorPanel/BiquOperatorPanel.vcxproj.filters
+++ b/BiquOperatorPanel/BiquOperatorPanel.vcxproj.filters
@@ -371,6 +371,9 @@
     <ClInclude Include="Pheonix\TouchLCD\Widgets\widget.h">
       <Filter>Pheonix\TouchLCD\Widgets</Filter>
     </ClInclude>
+    <ClInclude Include="Pheonix\TouchLCD\Widgets\panel.h">
+      <Filter>Pheonix\TouchLCD\Widgets</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Pheonix\TouchLCD\4xx\TouchLCD_4xx.c">
@@ -518,6 +521,9 @@
       <Filter>Pheonix\TouchLCD\Widgets</Filter>
     </ClCompile>
     <ClCompile Include="Pheonix\TouchLCD\Widgets\widget.c">
+      <Filter>Pheonix\TouchLCD\Widgets</Filter>
+    </ClCompile>
+    <ClCompile Include="Pheonix\TouchLCD\Widgets\panel.c">
       <Filter>Pheonix\TouchLCD\Widgets</Filter>
     </ClCompile>
   </ItemGroup>
