--- a/BiquOperatorPanel/BiquOperatorPanel.vcxproj
+++ b/BiquOperatorPanel/BiquOperatorPanel.vcxproj
@@ -197,8 +197,7 @@
     <ClInclude Include="Pheonix\TouchLCD\GUI\display.h" />
     <ClInclude Include="Pheonix\TouchLCD\GUI\DisplayList.h" />
     <ClInclude Include="Pheonix\TouchLCD\GUI\font.h" />
-    <ClInclude Include="Pheonix\TouchLCD\GUI\FontAvenirNext20.h" />
-    <ClInclude Include="Pheonix\TouchLCD\GUI\FontComicSansMS20.h" />
+    <ClInclude Include="Pheonix\TouchLCD\GUI\FontArial.h" />
     <ClInclude Include="Pheonix\TouchLCD\GUI\FontMenlo32.h" />
     <ClInclude Include="Pheonix\TouchLCD\GUI\gui.h" />
     <ClInclude Include="Pheonix\TouchLCD\GUI\PanelMain.designer.h" />
