--- a/BiquOperatorPanel/BiquOperatorPanel.vcxproj
+++ b/BiquOperatorPanel/BiquOperatorPanel.vcxproj
@@ -94,11 +94,14 @@
     <ClCompile Include="Drivers\STM32F4xx_HAL_Driver\Src\stm32f4xx_ll_fsmc.c" />
     <ClCompile Include="Drivers\STM32F4xx_HAL_Driver\Src\stm32f4xx_ll_usb.c" />
     <ClCompile Include="ICONS\icon_start.c" />
+    <ClCompile Include="Pheonix\FLASH\4xx\flash_4xx.c" />
     <ClCompile Include="Pheonix\GPIO\GPIO_Init.c" />
+    <ClCompile Include="Pheonix\GPIO\pininit.c" />
     <ClCompile Include="Pheonix\SPI\spi.c" />
     <ClCompile Include="Pheonix\SPI\sw_spi.c" />
     <ClCompile Include="Pheonix\SPI\w25qxx.c" />
     <ClCompile Include="Pheonix\SPI\xpt2046.c" />
+    <ClCompile Include="Pheonix\taskmanager.c" />
     <ClCompile Include="Pheonix\Timer\timer_pwm.c" />
     <ClCompile Include="Pheonix\TouchLCD\4xx\TouchLCD_4xx.c" />
     <ClCompile Include="Pheonix\TouchLCD\Drivers\SSD1963.c" />
@@ -108,6 +111,8 @@
     <ClCompile Include="Pheonix\TouchLCD\GUI\PanelMain.designer.c" />
     <ClCompile Include="Pheonix\TouchLCD\lcd.c" />
     <ClCompile Include="Pheonix\TouchLCD\lcd_dma.c" />
+    <ClCompile Include="Pheonix\TouchLCD\lcd_encoder.c" />
+    <ClCompile Include="Pheonix\TouchLCD\lcd_touch.c" />
     <ClCompile Include="Pheonix\TouchLCD\Widgets\button.c" />
     <ClCompile Include="Pheonix\TouchLCD\Widgets\label.c" />
     <ClCompile Include="Pheonix\TouchLCD\Widgets\panel.c" />
@@ -183,14 +188,18 @@
     <ClInclude Include="Drivers\STM32F4xx_HAL_Driver\Inc\stm32f4xx_ll_utils.h" />
     <ClInclude Include="ICONS\icons.h" />
     <ClInclude Include="Pheonix\configure.h" />
+    <ClInclude Include="Pheonix\FLASH\4xx\flash_4xx.h" />
     <ClInclude Include="Pheonix\global.h" />
     <ClInclude Include="Pheonix\GPIO\GPIO_Init.h" />
+    <ClInclude Include="Pheonix\GPIO\pininit.h" />
     <ClInclude Include="Pheonix\GPIO\pinout.h" />
     <ClInclude Include="Pheonix\GPIO\pins.h" />
+    <ClInclude Include="Pheonix\RevisionHistory.h" />
     <ClInclude Include="Pheonix\SPI\spi.h" />
     <ClInclude Include="Pheonix\SPI\sw_spi.h" />
     <ClInclude Include="Pheonix\SPI\w25qxx.h" />
     <ClInclude Include="Pheonix\SPI\xpt2046.h" />
+    <ClInclude Include="Pheonix\taskmanager.h" />
     <ClInclude Include="Pheonix\Timer\timer_pwm.h" />
     <ClInclude Include="Pheonix\TouchLCD\4xx\TouchLCD_4xx.h" />
     <ClInclude Include="Pheonix\TouchLCD\Drivers\SSD1963.h" />
@@ -198,11 +207,12 @@
     <ClInclude Include="Pheonix\TouchLCD\GUI\DisplayList.h" />
     <ClInclude Include="Pheonix\TouchLCD\GUI\font.h" />
     <ClInclude Include="Pheonix\TouchLCD\GUI\FontArial.h" />
-    <ClInclude Include="Pheonix\TouchLCD\GUI\FontMenlo32.h" />
     <ClInclude Include="Pheonix\TouchLCD\GUI\gui.h" />
     <ClInclude Include="Pheonix\TouchLCD\GUI\PanelMain.designer.h" />
     <ClInclude Include="Pheonix\TouchLCD\lcd.h" />
     <ClInclude Include="Pheonix\TouchLCD\lcd_dma.h" />
+    <ClInclude Include="Pheonix\TouchLCD\lcd_encoder.h" />
+    <ClInclude Include="Pheonix\TouchLCD\lcd_touch.h" />
     <ClInclude Include="Pheonix\TouchLCD\Widgets\button.h" />
     <ClInclude Include="Pheonix\TouchLCD\Widgets\label.h" />
     <ClInclude Include="Pheonix\TouchLCD\Widgets\panel.h" />
