--- a/BiquOperatorPanel/BiquOperatorPanel.vcxproj.filters
+++ b/BiquOperatorPanel/BiquOperatorPanel.vcxproj.filters
@@ -97,6 +97,7 @@
     <ClCompile Include="Core\main.c">
       <Filter>Core</Filter>
     </ClCompile>
+    <None Include="stm32.props" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Core\main.h">
@@ -407,6 +408,9 @@
     <ClInclude Include="Pheonix\TouchLCD\Widgets\listbox.h">
       <Filter>Pheonix\TouchLCD\Widgets</Filter>
     </ClInclude>
+    <ClInclude Include="Pheonix\TouchLCD\Widgets\tabcontrol.h">
+      <Filter>Pheonix\TouchLCD\Widgets</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Pheonix\TouchLCD\4xx\TouchLCD_4xx.c">
@@ -578,6 +582,9 @@
       <Filter>Pheonix\TouchLCD\Widgets</Filter>
     </ClCompile>
     <ClCompile Include="Pheonix\TouchLCD\Widgets\listbox.c">
+      <Filter>Pheonix\TouchLCD\Widgets</Filter>
+    </ClCompile>
+    <ClCompile Include="Pheonix\TouchLCD\Widgets\tabcontrol.c">
       <Filter>Pheonix\TouchLCD\Widgets</Filter>
     </ClCompile>
   </ItemGroup>
