--- a/BiquOperatorPanel/BiquOperatorPanel.vcxproj
+++ b/BiquOperatorPanel/BiquOperatorPanel.vcxproj
@@ -115,6 +115,7 @@
     <ClCompile Include="Pheonix\TouchLCD\lcd_encoder.c" />
     <ClCompile Include="Pheonix\TouchLCD\lcd_touch.c" />
     <ClCompile Include="Pheonix\TouchLCD\Widgets\button.c" />
+    <ClCompile Include="Pheonix\TouchLCD\Widgets\dropdownlist.c" />
     <ClCompile Include="Pheonix\TouchLCD\Widgets\edit.c" />
     <ClCompile Include="Pheonix\TouchLCD\Widgets\label.c" />
     <ClCompile Include="Pheonix\TouchLCD\Widgets\listbox.c" />
@@ -220,6 +221,7 @@
     <ClInclude Include="Pheonix\TouchLCD\lcd_encoder.h" />
     <ClInclude Include="Pheonix\TouchLCD\lcd_touch.h" />
     <ClInclude Include="Pheonix\TouchLCD\Widgets\button.h" />
+    <ClInclude Include="Pheonix\TouchLCD\Widgets\dropdownlist.h" />
     <ClInclude Include="Pheonix\TouchLCD\Widgets\edit.h" />
     <ClInclude Include="Pheonix\TouchLCD\Widgets\label.h" />
     <ClInclude Include="Pheonix\TouchLCD\Widgets\listbox.h" />
