--- a/BiquOperatorPanel/BiquOperatorPanel.vcxproj.filters
+++ b/BiquOperatorPanel/BiquOperatorPanel.vcxproj.filters
@@ -417,6 +417,9 @@
     <ClInclude Include="Pheonix\TouchLCD\GUI\PanelMain.event.h">
       <Filter>Pheonix\TouchLCD\GUI</Filter>
     </ClInclude>
+    <ClInclude Include="Pheonix\TouchLCD\Widgets\dropdownlist.h">
+      <Filter>Pheonix\TouchLCD\Widgets</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Pheonix\TouchLCD\4xx\TouchLCD_4xx.c">
@@ -598,6 +601,9 @@
     </ClCompile>
     <ClCompile Include="Pheonix\TouchLCD\GUI\PanelMain.event.c">
       <Filter>Pheonix\TouchLCD\GUI</Filter>
+    </ClCompile>
+    <ClCompile Include="Pheonix\TouchLCD\Widgets\dropdownlist.c">
+      <Filter>Pheonix\TouchLCD\Widgets</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
